# ncnn-android-yolov5

./: README.md  build.gradle  gradle.properties  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: construction.param  pipe.param
app/src/main/java/com/hhu/smartdetection/: CustomDialog.java  DetectionActivity.java  MainActivity.java  MyAPP.java  YoloV5Ncnn.java
app/src/main/java/com/tencent/yolov5ncnn/: MainActivity.java  YoloV5Ncnn.java
app/src/main/jni/: CMakeLists.txt  yolov5ncnn_jni.cpp
app/src/main/jni/arm64-v8a/lib/cmake/glslang/: glslang-config-version.cmake
app/src/main/jni/armeabi-v7a/include/ncnn/: platform.h
app/src/main/jni/armeabi-v7a/lib/cmake/glslang/: glslang-config-version.cmake  glslang-targets.cmake
app/src/main/jni/x86_64/include/ncnn/: platform.h
app/src/main/jni/x86_64/lib/cmake/ncnn/: ncnn.cmake
app/src/main/res/layout/: activity_detection.xml  activity_main.xml  layout_custom_dialog.xml  main.xml
app/src/main/res/layout-land/: activity_detection.xml
app/src/main/res/values/: colors.xml  informs.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
